[package]
name = "habitos-multiplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
fs-err = "2.9.0"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde-lexpr = "0.1.3"
teloxide = { version = "0.12.2", features = ["rustls", "ctrlc_handler"], default-features = false }
time = { version = "0.3.23", features = ["serde-human-readable"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "parking_lot"] }
